middleman airbnb homepage

--- a/data/users.yml
+++ b/data/users.yml
@@ -1,4 +1,4 @@
-- name: 'Sébastien Saunier'
-  github_nickname: 'ssaunier'
-- name: 'Boris Paillard'
-  github_nickname: 'Papillard'
+- name: 'Alex Thoreux'
+  github_nickname: 'alexthr'
+- name: 'Vincent Menauge'
+  github_nickname: 'vmenauge'
